ums-react/frontend-react.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
spec:
  selector:
    app: frontend-react
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
        - name: frontend-react
          image: zaiats85/usm-react:v1.2
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
